--- a/reference-implementation/pom.xml
+++ b/reference-implementation/pom.xml
@@ -46,6 +46,16 @@
 		<commons-io.version>2.4</commons-io.version>
 		<apache-pio.version>3.8</apache-pio.version>
 		<vaadin-cdi-utils.version>0.9.9</vaadin-cdi-utils.version>
+		
+		<!-- database connection properties -->
+		<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+		<db.driver>oracle.jdbc.OracleDriver</db.driver>
+		<db.username>test1</db.username>
+		<db.password>1111</db.password>
+		
+		<!-- resource location -->
+		<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
+		<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
 	</properties>
 
 	<build>
@@ -142,6 +152,57 @@
 						</execution>
 				</executions>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>${liquibase.version}</version>
+				<configuration>
+					<url>${db.url}</url>
+					<driver>${db.driver}</driver>
+					<username>${db.username}</username>
+					<password>${db.password}</password>
+					<changeLogFile>${changeset.file}</changeLogFile>
+					<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+				</configuration>
+				<executions>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.oracle</groupId>
+						<artifactId>ojdbc6</artifactId>
+						<version>11.2.0.3</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>dbunit-maven-plugin</artifactId>
+				<version>${dbunit-plugin.version}</version>
+				<configuration>
+					<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
+					<url>${db.url}</url>
+					<driver>${db.driver}</driver>
+					<username>${db.username}</username>
+					<password>${db.password}</password>
+					<src>${testdata.file}</src>
+					<type>CLEAN_INSERT</type>
+					<schema>${db.username}</schema>
+					<transaction>true</transaction>
+					<format>flat</format>
+					<skip>${skipTests}</skip>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.oracle</groupId>
+						<artifactId>ojdbc6</artifactId>
+						<version>11.2.0.3</version>
+					</dependency>
+				</dependencies>
+				<executions>
+				</executions>
+			</plugin>							
 		</plugins>
 
 		<pluginManagement>
@@ -355,100 +416,6 @@
 
 	<profiles>
 		<profile>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<id>default</id>
-
-			<properties>
-				<!-- jboss instances -->
-				<jboss.host>localhost</jboss.host>
-				<jboss.port>9999</jboss.port>
-				<jboss.deployment.context>head</jboss.deployment.context>
-
-				<!-- database connection properties -->
-				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
-				<db.driver>oracle.jdbc.OracleDriver</db.driver>
-				<db.username>test1</db.username>
-				<db.password>1111</db.password>
-				
-				<!-- resource location -->
-				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
-				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
-			</properties>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.liquibase</groupId>
-						<artifactId>liquibase-maven-plugin</artifactId>
-						<version>${liquibase.version}</version>
-						<configuration>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<changeLogFile>${changeset.file}</changeLogFile>
-							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-						</configuration>
-						<executions>
-							<execution>
-								<id>update</id>
-								<phase>test-compile</phase>
-								<goals>
-									<goal>update</goal>
-								</goals>
-							</execution>
-						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>dbunit-maven-plugin</artifactId>
-						<version>${dbunit-plugin.version}</version>
-						<configuration>
-							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<src>${testdata.file}</src>
-							<type>CLEAN_INSERT</type>
-							<schema>${db.username}</schema>
-							<transaction>true</transaction>
-							<format>flat</format>
-							<skip>${skipTests}</skip>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-						<executions>
-							<execution>
-								<id>operation</id>
-								<phase>test-compile</phase>
-								<goals>
-									<goal>operation</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>				
-				</plugins>
-			</build>
-			
-		</profile>
-
-		<profile>
 			<id>ci-development</id>
 			<properties>
 				<!-- jboss instances -->
@@ -466,61 +433,26 @@
 				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
 				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
 			</properties>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.liquibase</groupId>
-						<artifactId>liquibase-maven-plugin</artifactId>
-						<version>${liquibase.version}</version>
-						<configuration>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<changeLogFile>${changeset.file}</changeLogFile>
-							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-						</configuration>
-						<executions>
-						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>dbunit-maven-plugin</artifactId>
-						<version>${dbunit-plugin.version}</version>
-						<configuration>
-							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<src>${testdata.file}</src>
-							<type>CLEAN_INSERT</type>
-							<schema>${db.username}</schema>
-							<transaction>true</transaction>
-							<format>flat</format>
-							<skip>${skipTests}</skip>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-						<executions>
-						</executions>
-					</plugin>				
-				</plugins>
-			</build>
+		</profile>
+
+		<profile>
+			<id>ci-development-deploy</id>
+			<properties>
+				<!-- jboss instances -->
+				<jboss.host>localhost</jboss.host>
+				<jboss.port>9999</jboss.port>
+				<jboss.deployment.context>app</jboss.deployment.context>
+
+				<!-- database connection properties -->
+				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+				<db.driver>oracle.jdbc.OracleDriver</db.driver>
+				<db.username>test1</db.username>
+				<db.password>1111</db.password>
+
+				<!-- resource location -->
+				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
+				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>
+			</properties>
 		</profile>
 
 		<profile>
@@ -541,61 +473,26 @@
 				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
 				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>				
 			</properties>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.liquibase</groupId>
-						<artifactId>liquibase-maven-plugin</artifactId>
-						<version>${liquibase.version}</version>
-						<configuration>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<changeLogFile>${changeset.file}</changeLogFile>
-							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-						</configuration>
-						<executions>
-						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>dbunit-maven-plugin</artifactId>
-						<version>${dbunit-plugin.version}</version>
-						<configuration>
-							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<src>${testdata.file}</src>
-							<type>CLEAN_INSERT</type>
-							<schema>${db.username}</schema>
-							<transaction>true</transaction>
-							<format>flat</format>
-							<skip>${skipTests}</skip>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-						<executions>
-						</executions>
-					</plugin>				
-				</plugins>
-			</build>
+		</profile>
+
+		<profile>
+			<id>ci-qa-deploy</id>
+			<properties>
+				<!-- jboss instances -->
+				<jboss.host>localhost</jboss.host>
+				<jboss.port>9998</jboss.port>
+				<jboss.deployment.context>app</jboss.deployment.context>
+
+				<!-- database connection properties -->
+				<db.url>jdbc:oracle:thin:@192.168.1.176:1521:xe</db.url>
+				<db.driver>oracle.jdbc.OracleDriver</db.driver>
+				<db.username>test2</db.username>
+				<db.password>1111</db.password>
+
+				<!-- resource location -->
+				<changeset.file>${project.basedir}/src/main/resources/database.xml</changeset.file>
+				<testdata.file>${project.basedir}/src/test/resources/TestDataSet.xml</testdata.file>				
+			</properties>
 		</profile>
 
 		<profile>
@@ -616,61 +513,6 @@
 				<changeset.file>${project.build.directory}/${artifactId}-${version}-changeset.xml</changeset.file>
 				<testdata.file>${project.build.directory}/${artifactId}-${version}-testdataset.xml</testdata.file>
 			</properties>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.liquibase</groupId>
-						<artifactId>liquibase-maven-plugin</artifactId>
-						<version>${liquibase.version}</version>
-						<configuration>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<changeLogFile>${changeset.file}</changeLogFile>
-							<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
-						</configuration>
-						<executions>
-						</executions>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>dbunit-maven-plugin</artifactId>
-						<version>${dbunit-plugin.version}</version>
-						<configuration>
-							<dataTypeFactoryName>org.dbunit.ext.oracle.Oracle10DataTypeFactory</dataTypeFactoryName>
-							<url>${db.url}</url>
-							<driver>${db.driver}</driver>
-							<username>${db.username}</username>
-							<password>${db.password}</password>
-							<src>${testdata.file}</src>
-							<type>CLEAN_INSERT</type>
-							<schema>${db.username}</schema>
-							<transaction>true</transaction>
-							<format>flat</format>
-							<skip>${skipTests}</skip>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>com.oracle</groupId>
-								<artifactId>ojdbc6</artifactId>
-								<version>11.2.0.3</version>
-							</dependency>
-						</dependencies>
-						<executions>
-						</executions>
-					</plugin>				
-				</plugins>
-			</build>
 		</profile>
 	</profiles>
 </project>
